tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/CaseFormDocument__c.object-meta.xml
<CustomObject>
    <description>Tracks ROIs, Consent Forms, and Disclosure Forms uploaded to a Case, with associated metadata.</description>
    <label>Case Form Document</label>
    <nameField>
        <displayFormat>CFD-{0000}</displayFormat>
        <label>Case Form Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Form Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>