tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/fields/Agency_Individual__c.field-meta.xml
<CustomField>
    <fullName>Agency_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The agency or individual this form pertains to. Required for ROIs and Disclosure Forms.</description>
    <label>Agency or Individual</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Form Documents (Agency/Individual)</relationshipLabel>
    <relationshipName>CaseFormDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>