tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <description>Consent form type description. Required for Consent Form documents.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>