tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument ID of the uploaded file attached to this form record.</description>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>