tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <description>Effective date of this form document.</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>