tgthrProgramManagement/force-app/main/default/objects/CaseFormDocument__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>Consent Form</fullName>
            </value>
            <value>
                <fullName>Disclosure Form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>